# rasant

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
assets/: behcmarks.md  benchmarks.md  why_rasant.md
benches/: allocs.rs  attributes.rs  filters.rs  log_write.rs  output_formats.rs  sinks.rs  writes.rs
src/: attributes.rs  c_bindings_unix.rs  c_bindings_win.rs  console.rs  constant.rs  encoding.rs  filter.rs  format.rs  level.rs  lib.rs  logger.rs  macros.rs  queue.rs  sink.rs  sys.rs  time.rs  types.rs
src/attributes/: scalar.rs  value.rs
src/filter/: level.rs  levels.rs  matches.rs  sample.rs
src/format/: cbor.rs  color_compact.rs  color_full.rs  compact.rs  full.rs  json.rs
src/sink/: black_hole.rs  bytes.rs  file.rs  format.rs  io.rs  journald.rs  log_file.rs  memory.rs  stderr.rs  stdout.rs  string.rs  syslog.rs  wrapper.rs
src/time/: c_bindings.rs  constant.rs  format.rs  parts.rs
tests/: attribute_values.rs  basic_logging.rs  benchmark.rs  external_filter.rs  external_sink.rs  file_sink.rs  filtering.rs  formatting_async.rs  formatting_async_trace.rs  formatting_sync.rs  macro_logging.rs  macros.rs  sample_output.rs  write_benchmark.rs
