[package]
name = "rasant"
version = "0.3.0"
readme = "README.md"
license = "MIT"
edition = "2024"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[lints.rust]
warnings = "deny"

[lib]
name = "rasant"
path = "src/lib.rs"

[dependencies]
ntime = "0.3.0"

[features]
# TODO: use "cargo bench" once that feature finally becomes stable >:(
benchmark = []
