[package]
name = "rasant"
version = "0.6.0"
description = "Rasant is a lightweight, high performance and flexible Rust library for structured logging."
authors = ["Lisandro Pin <lisandrop@proton.me>"]
categories = ["development-tools"]
license = "MIT"
edition = "2024"
exclude = [".github/", ".gitignore", "assets/"]
readme = "README.md"
keywords = ["logging"]
repository = "https://github.com/plisandro/rasant"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[lints.rust]
warnings = "deny"

[lib]
name = "rasant"
path = "src/lib.rs"

[dev-dependencies]
divan = "0.1.21"

[dependencies]
ntime = "0.4.0"

[[bench]]
name = "log_write"
harness = false

[[bench]]
name = "allocs"
harness = false

[[bench]]
name = "output_formats"
harness = false
